2017-03-17  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FObject
	* Some minor bug fixes in FObject

2017-03-13  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FRect

2017-03-11  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FPoint

2017-03-10  Markus Gans  <guru.mail@muenster.de>
	* Unit tests for the FString class completed
	* Minor bug fixes in FString

2017-02-25  Markus Gans  <guru.mail@muenster.de>
	* First CppUnit tests implemented

2017-02-22  Markus Gans  <guru.mail@muenster.de>
	* Generalize mouse event passing in FMenuItem

2017-02-19  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FTerm::init_termcaps
	* Refactoring FTerm::init_encoding

2017-02-18  Markus Gans  <guru.mail@muenster.de>
	* Avoid scroll bar overshooting
	* Refactoring FListView::onMouseMove
	* Refactoring FDialog::initDialogMenu

2017-02-17  Markus Gans  <guru.mail@muenster.de>
	* Generalize scroll functions in FTextView
	* Refactoring FButtonGroup::drawLabel
	* Refactoring FToggleButton::drawLabel

2017-02-11  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FWidget::focusNextChild and FWidget::focusPrevChild
	* Refactoring FListView::onWheel
	* Refactoring FListView::drawColumnLabels
	* Refactoring FTerm::getSystemTermType
	* Rename getTermName() to getTermFileName()

2017-02-10  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FOptiMove::verticalMove and FOptiMove::horizontalMove
	* Refactoring FVTerm::getCharacter
	* Refactoring FWidget::drawBorder

2017-02-02  Markus Gans  <guru.mail@muenster.de>
	* Avoids flickering when redrawing a focused widget

2017-01-31  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FSwitch::drawCheckButton
	* Refactoring FWidget::redraw
	* Refactoring FMessageBox::init 
	* Refactoring FFileDialog::init 

2017-01-30  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FLabel::draw
	* Refactoring FFileDialog::readDir

2017-01-28  Markus Gans  <guru.mail@muenster.de>